# PROMPTLY

./: README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analyze.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: ai_engine.py  local_nlp.py  pipeline.py
backend/tests/: test_coordinates.py
frontend/: manifest.json
frontend/src/: background.js  content.js  styles.css  widget.js
