[tool.poetry]
name = "promptly-backend"
version = "1.0.0"
description = "FastAPI Backend for Promptly - The Grammarly for Prompts"
authors = ["Promptly Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.0"
google-genai = "^0.1.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
